--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,1 +1,11 @@
 @import 'tailwindcss';
+
+@theme {
+  --color-primary: #3D06D7;
+  --color-primary-light: #906FEE;
+  --color-dark: #1E0E4C;
+  --color-light-grey: #CFCADF;
+
+  --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif;
+  --font-display: 'Koulen', sans-serif;
+}
